; ModuleID = '/home/carl/AnghaBench/reactos/drivers/bus/acpi/extr_osl.c_AcpiOsCreateLock.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/bus/acpi/extr_osl.c_AcpiOsCreateLock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [15 x i8] c"Bad parameter\0A\00", align 1
@AE_BAD_PARAMETER = common dso_local global i32 0, align 4
@NonPagedPool = common dso_local global i32 0, align 4
@AE_NO_MEMORY = common dso_local global i32 0, align 4
@AE_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @AcpiOsCreateLock(i64* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64*, align 8
  %4 = alloca i64, align 8
  store i64* %0, i64** %3, align 8
  %5 = load i64*, i64** %3, align 8
  %6 = icmp ne i64* %5, null
  br i1 %6, label %10, label %7

7:                                                ; preds = %1
  %8 = call i32 @DPRINT1(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0))
  %9 = load i32, i32* @AE_BAD_PARAMETER, align 4
  store i32 %9, i32* %2, align 4
  br label %23

10:                                               ; preds = %1
  %11 = load i32, i32* @NonPagedPool, align 4
  %12 = call i64 @ExAllocatePoolWithTag(i32 %11, i32 4, i8 signext 65)
  store i64 %12, i64* %4, align 8
  %13 = load i64, i64* %4, align 8
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %17, label %15

15:                                               ; preds = %10
  %16 = load i32, i32* @AE_NO_MEMORY, align 4
  store i32 %16, i32* %2, align 4
  br label %23

17:                                               ; preds = %10
  %18 = load i64, i64* %4, align 8
  %19 = call i32 @KeInitializeSpinLock(i64 %18)
  %20 = load i64, i64* %4, align 8
  %21 = load i64*, i64** %3, align 8
  store i64 %20, i64* %21, align 8
  %22 = load i32, i32* @AE_OK, align 4
  store i32 %22, i32* %2, align 4
  br label %23

23:                                               ; preds = %17, %15, %7
  %24 = load i32, i32* %2, align 4
  ret i32 %24
}

declare dso_local i32 @DPRINT1(i8*) #1

declare dso_local i64 @ExAllocatePoolWithTag(i32, i32, i8 signext) #1

declare dso_local i32 @KeInitializeSpinLock(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
